# signalrs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
docs/: README.md  architecture.md  build-guide.md  configuration.md  modules.md  order-types.md  setup.md  signal-flow.md
src/: consts.rs  error.rs  lib.rs
src/invoke/: gui.rs  mod.rs
src/middleware/: file.rs  mod.rs  mouse.rs  tcp.rs  ticker.rs  utils.rs
src/order_type/: choose.rs  entry.rs  exit.rs  mod.rs  origin.rs  process.rs  simple.rs
tests/: integration_test.rs
