[package]
name = "signalrs"
version = "0.1.2"
edition = "2021"
description = "description"
authors = ["_numbp"]
documentation = "https://docs.rs/signalrs/0.1.1"
repository = "https://github.com/go-numb/signalrs"
license = "MIT"

[lib]
name = "signalrs"               # または任意の名前
crate-type = ["rlib", "cdylib"] # wasmやネイティブなど、様々な用途に対応


[dependencies]
serde_json = { version = "1", features = ["std"] }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
serde_with = "3.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["maths"] }
mouse-rs = "0.4.2"
log = "0.4.22"
env_logger = "0.11.5"
ta = "0.4.0"
csv = "1.3.0"
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "winbase",
    "sddl",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
