[package]
name = "signalrs"
version = "0.2.0"
edition = "2021"
description = "description"
authors = ["_numbp"]
documentation = "https://docs.rs/signalrs/0.2.0"
repository = "https://github.com/go-numb/signalrs"
license = "MIT"

[lib]
name = "signalrs"               # または任意の名前
crate-type = ["rlib", "cdylib"] # wasmやネイティブなど、様々な用途に対応


[dependencies]
serde_json = { version = "1", features = ["std"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
serde_with = "3.17.0"
chrono = { version = "0.4.44", features = ["serde"] }
rust_decimal = { version = "1.40.0", features = ["maths"] }
mouse-rs = "0.4.2"
log = "0.4.29"
thiserror = "2"
env_logger = "0.11.9"
ta = "0.4.0"
csv = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "securitybaseapi",
    "handleapi",
    "winbase",
    "sddl",
] }
